force-app/main/default/objects/ContractGroupPlan/ContractGroupPlan.object-meta.xml
<CustomObject>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>