force-app/main/default/objects/ContractGroupPlan/fields/vlocity_ins_fsc__Product2Id__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins_fsc__Product2Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Contracted Plans</relationshipLabel>
    <relationshipName>OrderProductStd</relationshipName>
    <type>Lookup</type>
</CustomField>