force-app/main/default/objects/ContractGroupPlan/fields/ZRH_AseguradosInscriptos__c.field-meta.xml
<CustomField>
    <fullName>ZRH_AseguradosInscriptos__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marca que indica si la inscripción de asegurados fue realizada para este registro</description>
    <label>Asegurados Inscriptos</label>
    <type>Checkbox</type>
</CustomField>