force-app/main/default/objects/ContractGroupPlan/fields/ZRH_AtributosReqMedicosSeleccionado__c.field-meta.xml
<CustomField>
    <fullName>ZRH_AtributosReqMedicosSeleccionado__c</fullName>
    <label>Atributos Requistos Medicos Seleccionado</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>