force-app/main/default/objects/ContractGroupPlan/fields/ZRH_AtributosRequisitosAsegurabilidad__c.field-meta.xml
<CustomField>
    <fullName>ZRH_AtributosRequisitosAsegurabilidad__c</fullName>
    <description>Se almacena los atributos gestionados de Requisitos de Asegurabilidad.</description>
    <label>Atributos Requisitos de Asegurabilidad.</label>
    <length>98304</length>
    <type>LongTextArea</type>
</CustomField>