force-app/main/default/objects/ContractGroupPlan/fields/ZRH_AtributosTopes__c.field-meta.xml
<CustomField>
    <fullName>ZRH_AtributosTopes__c</fullName>
    <label>Atributos Topes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>