force-app/main/default/objects/ContractGroupPlan/fields/ZRH_CodigoProducto__c.field-meta.xml
<CustomField>
    <fullName>ZRH_CodigoProducto__c</fullName>
    <formula>vlocity_ins_fsc__Product2Id__r.ProductCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código de Producto</label>
    <type>Text</type>
</CustomField>