force-app/main/default/objects/ContractGroupPlan/fields/ZRH_ConsultaEstadoPolizaManual__c.field-meta.xml
<CustomField>
    <fullName>ZRH_ConsultaEstadoPolizaManual__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consulta Estado De Poliza Manual</label>
    <type>Checkbox</type>
</CustomField>