force-app/main/default/objects/ContractGroupPlan/fields/ZRH_DigitoVerificadorPoliza__c.field-meta.xml
<CustomField>
    <fullName>ZRH_DigitoVerificadorPoliza__c</fullName>
    <label>Dígito Verificador de la Póliza</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>