force-app/main/default/objects/ContractGroupPlan/fields/ZRH_EndosoEnviado__c.field-meta.xml
<CustomField>
    <fullName>ZRH_EndosoEnviado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Endoso Enviado</label>
    <type>Checkbox</type>
</CustomField>