force-app/main/default/objects/ContractGroupPlan/fields/ZRH_EnvioGlosaPendiente__c.field-meta.xml
<CustomField>
    <fullName>ZRH_EnvioGlosaPendiente__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Envio de Glosa Pendiente</label>
    <type>Checkbox</type>
</CustomField>