force-app/main/default/objects/ContractGroupPlan/fields/ZRH_EsRenovacion__c.field-meta.xml
<CustomField>
    <fullName>ZRH_EsRenovacion__c</fullName>
    <description>Es una póliza de renovación</description>
    <formula>ZRH_Periodo__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Renovación</label>
    <type>Checkbox</type>
</CustomField>