force-app/main/default/objects/ContractGroupPlan/fields/ZRH_Estado__c.field-meta.xml
<CustomField>
    <fullName>ZRH_Estado__c</fullName>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Ingresada</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Póliza Reservada e Ingresada</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Envio de propuesta de Poliza al AS400</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Póliza en estado de propuesta sin Error</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Póliza en estado de propuesta con Error</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Póliza en estado de propuesta modificada sin Validar</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>Póliza Oficializada</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>Anulada</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>No Existe</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>Póliza en Curso</label>
            </value>
            <value>
                <fullName>16</fullName>
                <label>Póliza no Vigente</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>