force-app/main/default/objects/ContractGroupPlan/fields/ZRH_EstadoPolizaActualizado__c.field-meta.xml
<CustomField>
    <fullName>ZRH_EstadoPolizaActualizado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Estado de Poliza Actualizado</label>
    <type>Checkbox</type>
</CustomField>