force-app/main/default/objects/ContractGroupPlan/fields/ZRH_FechaOficializacion__c.field-meta.xml
<CustomField>
    <fullName>ZRH_FechaOficializacion__c</fullName>
    <label>Fecha de Oficialización</label>
    <type>Date</type>
</CustomField>