force-app/main/default/objects/ContractGroupPlan/fields/ZRH_Folio__c.field-meta.xml
<CustomField>
    <fullName>ZRH_Folio__c</fullName>
    <label>Folio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>