force-app/main/default/objects/ContractGroupPlan/fields/ZRH_GrupoDeCobertura__c.field-meta.xml
<CustomField>
    <fullName>ZRH_GrupoDeCobertura__c</fullName>
    <formula>TEXT(vlocity_ins_fsc__Product2Id__r.ZRH_GrupoDeCobertura__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grupo de Cobertura</label>
    <type>Text</type>
</CustomField>