force-app/main/default/objects/ContractGroupPlan/fields/ZRH_GWP__c.field-meta.xml
<CustomField>
    <fullName>ZRH_GWP__c</fullName>
    <defaultValue>0</defaultValue>
    <description>GWP representa la prima anualizada de una póliza.</description>
    <label>GWP (P)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>