force-app/main/default/objects/ContractGroupPlan/fields/ZRH_GWPPeriodoAnterior__c.field-meta.xml
<CustomField>
    <fullName>ZRH_GWPPeriodoAnterior__c</fullName>
    <description>Representa la prima anualizada del periodo anterior de una póliza</description>
    <label>GWP Periodo Anterior (P)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>