force-app/main/default/objects/ContractGroupPlan/fields/ZRH_MensajeActualizacionEstadoPoliza__c.field-meta.xml
<CustomField>
    <fullName>ZRH_MensajeActualizacionEstadoPoliza__c</fullName>
    <label>Mensaje Actualización de Estado Póliza</label>
    <type>TextArea</type>
</CustomField>