force-app/main/default/objects/ContractGroupPlan/fields/ZRH_MensajeEndosoPDF__c.field-meta.xml
<CustomField>
    <fullName>ZRH_MensajeEndosoPDF__c</fullName>
    <label>Mensaje Endoso PDF</label>
    <type>TextArea</type>
</CustomField>