force-app/main/default/objects/ContractGroupPlan/fields/ZRH_MensajeRespuestaPDF__c.field-meta.xml
<CustomField>
    <fullName>ZRH_MensajeRespuestaPDF__c</fullName>
    <label>Mensaje Respuesta PDF</label>
    <type>TextArea</type>
</CustomField>