force-app/main/default/objects/ContractGroupPlan/fields/ZRH_MensajeRespuestaPropuestaPoliza__c.field-meta.xml
<CustomField>
    <fullName>ZRH_MensajeRespuestaPropuestaPoliza__c</fullName>
    <description>Almacena respuesta del servicio de propuesta.</description>
    <label>Mensaje Respuesta</label>
    <type>TextArea</type>
</CustomField>