force-app/main/default/objects/ContractGroupPlan/fields/ZRH_NumeroDePoliza__c.field-meta.xml
<CustomField>
    <fullName>ZRH_NumeroDePoliza__c</fullName>
    <formula>IF(ZRH_Folio__c != &quot;&quot;, ZRH_Folio__c + &quot;-&quot; + TEXT(ZRH_Periodo__c), &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Número de Póliza</label>
    <type>Text</type>
</CustomField>