force-app/main/default/objects/ContractGroupPlan/fields/ZRH_NumeroDePolizaSinDV__c.field-meta.xml
<CustomField>
    <fullName>ZRH_NumeroDePolizaSinDV__c</fullName>
    <formula>IF(
FIND(&quot;-&quot;, ZRH_Folio__c) &gt; 0,
LEFT(ZRH_Folio__c, FIND(&quot;-&quot;, ZRH_Folio__c) - 1),
ZRH_Folio__c
) + &quot;-&quot; + TEXT(ZRH_Periodo__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Número de Póliza sin DV</label>
    <type>Text</type>
</CustomField>