force-app/main/default/objects/ContractGroupPlan/fields/ZRH_PDFEndoso__c.field-meta.xml
<CustomField>
    <fullName>ZRH_PDFEndoso__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PDF Endoso</label>
    <type>Checkbox</type>
</CustomField>