force-app/main/default/objects/ContractGroupPlan/fields/ZRH_PDFPolizaCreado__c.field-meta.xml
<CustomField>
    <fullName>ZRH_PDFPolizaCreado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PDF Poliza Creado</label>
    <type>Checkbox</type>
</CustomField>