force-app/main/default/objects/ContractGroupPlan/fields/ZRH_Periodo__c.field-meta.xml
<CustomField>
    <fullName>ZRH_Periodo__c</fullName>
    <label>Período</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>