force-app/main/default/objects/ContractGroupPlan/fields/ZRH_PropuestaPolizaEnviada__c.field-meta.xml
<CustomField>
    <fullName>ZRH_PropuestaPolizaEnviada__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag que indica si la propuesta fue enviada con éxito.</description>
    <label>Propuesta Enviada</label>
    <type>Checkbox</type>
</CustomField>