force-app/main/default/objects/ContractGroupPlan/fields/ZRH_RenewalRatioPol__c.field-meta.xml
<CustomField>
    <fullName>ZRH_RenewalRatioPol__c</fullName>
    <description>Renewal Ratio representa el aumento porcentual en la prima durante un proceso de renovación. Ej. RR % = ((Prima propuesta / Prima vigente) x 100)</description>
    <formula>(ZRH_GWP__c/ ZRH_GWPPeriodoAnterior__c)</formula>
    <label>Renewal Ratio (P)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>