force-app/main/default/objects/ContractGroupPlan/fields/ZRH_Tarifa__c.field-meta.xml
<CustomField>
    <fullName>ZRH_Tarifa__c</fullName>
    <description>Campo para almacenar la tarifa</description>
    <label>Tarifa</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>