force-app/main/default/objects/ContractGroupPlan/fields/ZRH_TipoDeProducto__c.field-meta.xml
<CustomField>
    <fullName>ZRH_TipoDeProducto__c</fullName>
    <formula>vlocity_ins_fsc__Product2Id__r.vlocity_ins__RecordTypeName__c</formula>
    <label>Tipo de Producto</label>
    <type>Text</type>
</CustomField>