force-app/main/default/objects/ContractGroupPlan/fields/ZRH_UsuarioAsignado__c.field-meta.xml
<CustomField>
    <fullName>ZRH_UsuarioAsignado__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Usuario Asignado</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contract_Group_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>